kustomize/httpRoutes.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: server
  namespace: server
  labels:
    app: server
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: contour
      namespace: projectcontour
  hostnames:
    - "*"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: server
          port: 80
